fixed onload visibility issue

--- a/components/layoutComponents/fullScreenMenu/index.scss
+++ b/components/layoutComponents/fullScreenMenu/index.scss
@@ -15,6 +15,43 @@
 	font-family: "Luna Emu", "Poppins Black", "Arial Black", "sans serif", cursive;
 	font-weight: 300;
 }
+
+.menuContainer {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 0%;
+	height: 0%;
+	pointer-events: none;
+	overflow: hidden;
+	backface-visibility: hidden;
+	outline: 1px solid transparent;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity:0;
+	transition: all 0s ease 5s;
+}
+
+.menuBg {
+	backface-visibility: hidden;
+	width: 300vw;
+	height: 300vw;
+  min-height:200vh;
+	color: #fefefe;
+	background:linear-gradient(to bottom right, rgba(145,53,240,1), rgba(255,152,53,1));
+	background-size: cover,100% auto;
+	border-radius: 50%;
+	transition: opacity .75s ease .5s, transform .75s ease .5s;
+	flex: none;
+	transform: scale(0) translateZ(0);
+	overflow: hidden;
+	transform-origin: top right;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity:0;
+}
     
 .checkboxToggle {
 	position: absolute;
@@ -37,9 +74,12 @@
 				pointer-events: auto;
 				visibility: visible;
 				opacity:1;
+				transition: all 0s ease 0s;
+				width: 100%;
+				height: 100%;
 				.menuBg {
 					transform: scale(1) translateZ(0);
-					transition: all .75s ease 0s;
+					transition: transform .75s ease 0s;
 					visibility: visible;
 					background:linear-gradient(to bottom right, rgba(145,53,240,1), rgba(255,152,53,1));
 					opacity:1;
@@ -121,22 +161,6 @@
   transition: all 0.4s ease;
   margin:1em;
 }
-
-.menuContainer {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-	overflow: hidden;
-	backface-visibility: hidden;
-	outline: 1px solid transparent;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	opacity:1;
-}
 .hamburger {
 	position: absolute;
 	top: 0;
@@ -151,25 +175,6 @@
 	display: flex;
 	align-items: center;
   justify-content: center;
-}
-.menuBg {
-	backface-visibility: hidden;
-	visibility: hidden;
-	width: 300vw;
-	height: 300vw;
-  min-height:200vh;
-	color: #fefefe;
-	background:linear-gradient(to bottom right, rgba(145,53,240,1), rgba(255,152,53,1));
-	background-size: cover,100% auto;
-	border-radius: 50%;
-	transition: all .75s ease .5s;
-	flex: none;
-	transform: scale(0) translateZ(0);
-	overflow: hidden;
-	transform-origin: top right;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 .menuContent {
 	text-align: center;
